10/29 애니메이션 기능 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <title>부산국제영화제</title>
       <link rel="stylesheet" type="text/css" href="library/swiper.css">
       <link rel="stylesheet" type="text/css" href="library/fontawesome-free-5.15.4-web/css/all.min.css">
+      <link rel="stylesheet" href="library/animate.css">
       <link rel="stylesheet" type="text/css" href="css/common.css">
       <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -25,6 +26,16 @@
                               <li><a href="pages/event.html">이벤트</a></li>
                         </ul>
                   </div>
+                  <div class="lnb">
+                        <ul>
+                              <li><a href="#"><i class="fas fa-search fa-md"></i></a></li>
+                              <li><a href="#">KR/EN</a></li>
+                              <li><a href="#"><i class="fab fa-facebook-f fa-md"></i></i></a></li>
+                              <li><a href="#"><i class="fab fa-twitter fa-md"></i></i></a></li>
+                              <li><a href="#"><i class="fab fa-instagram fa-md"></i></a></li>
+                              <li><a href="#"><i class="fab fa-youtube fa-md"></i></a></li>
+                        </ul>
+                  </div>
                   <div class="trigger">
                         <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-2x"></i></a>
                         <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-2x"></i></a>
@@ -40,9 +51,27 @@
             <section id="big_image_slider">
                   <div class="swiper-container big_slider">
                         <div class="swiper-wrapper">
-                              <div class="swiper-slide slide1"></div>
-                              <div class="swiper-slide slide2"></div>
-                              <div class="swiper-slide slide3"></div>
+                              <div class="swiper-slide slide1">
+                                    <div class="slide-title wow">
+                                          <span>아트하우스 상</span>
+                                          <span>숲속의 아침</span>
+                                          <span>월드시네마</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide2">
+                                    <div class="slide-title wow">
+                                          <span>크리틱 상</span>
+                                          <span>시카고의 영화</span>
+                                          <span>월드시네마</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide3">
+                                    <div class="slide-title wow">
+                                          <span>독립영화 상</span>
+                                          <span>바쁜 현대인의 생활</span>
+                                          <span>다큐멘터리 영화</span>
+                                    </div>
+                              </div>
                         </div>
                         <!-- Add Pagination -->
                         <div class="swiper-pagination"></div>
@@ -65,11 +94,51 @@
                   <h3>월드스네마</h3>
                   <div class="swiper-container small_slider">
                         <div class="swiper-wrapper">
-                              <div class="swiper-slide slide1"></div>
-                              <div class="swiper-slide slide2"></div>
-                              <div class="swiper-slide slide3"></div>
-                              <div class="swiper-slide slide4"></div>
-                              <div class="swiper-slide slide5"></div>
+                              <div class="swiper-slide slide1">
+                                    <div class="slider-caption">
+                                          <span>나랑 별보러 가지 않을래?</span>
+                                          <span>데미안</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide2">
+                                    <div class="slider-caption">
+                                          <span>언덕 위에 빨간 집</span>
+                                          <span>나타샤</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide3">
+                                    <div class="slider-caption">
+                                          <span>붉은 등대</span>
+                                          <span>레 바오</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide4">
+                                    <div class="slider-caption">
+                                          <span>골목의 야시장</span>
+                                          <span>김동욱</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide5">
+                                    <div class="slider-caption">
+                                          <span>금요일 저녁</span>
+                                          <span>이소울</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide6">
+                                    <div class="slider-caption">
+                                          <span>보트를 타고</span>
+                                          <span>마엘</span>
+                                    </div>
+                              </div>
+                              <div class="swiper-slide slide7">
+                                    <div class="slider-caption">
+                                          <span>산과 여인</span>
+                                          <span>에릭 마티</span>
+                                    </div>
+                              </div>
+                        </div>
+                        <div class="back image">
+                              
                         </div>
                         <!-- Add Arrows -->
                         <div class="swiper-button-next swiper-button-black"></div>
@@ -274,6 +343,7 @@
 
 <script src="./library/jquery-3.6.0.min.js"></script>
 <script src="./library/swiper.min.js"></script>
+<script src="./library/wow.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/main.js"></script>
 </body>
