--- a/pages/event.html
+++ b/pages/event.html
@@ -24,6 +24,16 @@
                         <li><a href="../pages/event.html">이벤트</a></li>
                     </ul>
             </div>
+            <div class="lnb">
+                <ul>
+                    <li><a href="#"><i class="fas fa-search fa-md"></i></a></li>
+                    <li><a href="#">KR/EN</a></li>
+                    <li><a href="#"><i class="fab fa-facebook-f fa-md"></i></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter fa-md"></i></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram fa-md"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube fa-md"></i></a></li>
+                </ul>
+            </div>
             <div class="trigger">
                     <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-2x"></i></a>
                     <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-2x"></i></a>
