11/04 UI테스트 문서 수정, index 필요없는 코드 제거

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <ul>
                               <li><a href="#"><i class="fas fa-search fa-md"></i></a></li>
                               <li><a href="#">KR/EN</a></li>
-                              <li><a href="#"><i class="fab fa-facebook-f fa-md"></i></i></a></li>
-                              <li><a href="#"><i class="fab fa-twitter fa-md"></i></i></a></li>
+                              <li><a href="#"><i class="fab fa-facebook-f fa-md"></i></a></li>
+                              <li><a href="#"><i class="fab fa-twitter fa-md"></i></a></li>
                               <li><a href="#"><i class="fab fa-instagram fa-md"></i></a></li>
                               <li><a href="#"><i class="fab fa-youtube fa-md"></i></a></li>
                         </ul>
