11/04 inspection 파일 재업로드

--- a/pages/guide.html
+++ b/pages/guide.html
@@ -26,12 +26,12 @@
             </div>
             <div class="lnb">
                 <ul>
-                    <li><a href="#"><i class="fas fa-search fa-md"></i></a></li>
+                    <li><a href="#"><i class="fas fa-search fa-md"><span class="blind">찾기</span></i></a></li>
                     <li><a href="#">KR/EN</a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f fa-md"></i></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter fa-md"></i></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram fa-md"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube fa-md"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook-f fa-md"><span class="blind">페이스북</span></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter fa-md"><span class="blind">트위터</span></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram fa-md"><span class="blind">인스타그램</span></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube fa-md"><span class="blind">유튜브</span></i></a></li>
                 </ul>
             </div>
             <div class="trigger">
@@ -67,6 +67,7 @@
                 <div>
                     <h5>개막식 타임테이블</h5>
                     <table id="table_open_time">
+                        <caption></caption>
                         <tr>
                             <th>시간</th>
                             <th>구분</th>
