index.html link type 수정

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>부산국제영화제</title>
       <link rel="stylesheet" type="text/css" href="library/swiper.css">
       <link rel="stylesheet" type="text/css" href="library/fontawesome-free-5.15.4-web/css/all.min.css">
-      <link rel="stylesheet" href="library/animate.css">
+      <link rel="stylesheet" type="text/css" href="library/animate.css">
       <link rel="stylesheet" type="text/css" href="css/common.css">
       <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
